--- a/package.json
+++ b/package.json
@@ -8,11 +8,20 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "axios": "^1.8.1",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
+    "mongoose": "^8.10.2",
     "multer": "^1.4.5-lts.1",
-    "uuid": "^9.0.1"
+    "node-cron": "^3.0.3",
+    "uuid": "^9.0.1",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
